macros/entity_macros/tests/ui/derive/ent_wrapper/enum/unsupported-unit-variant.stderr
error: Unsupported shape `unit`
 --> $DIR/unsupported-unit-variant.rs:3:10
  |
3 | #[derive(EntWrapper)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
